# BiMi_2026

./: .gitattributes  README.md  lecturer_mapping.csv  pyproject.toml  sentences_top100.csv  sentences_top50_en.csv
model/: evaluate.csv  model.joblib  train_submission.ipynb
model_1_BoW/: [reveal]language_confound.csv  [reveal]language_confound.ipynb  [reveal]topic_leakage.ipynb  evaluate.ipynb  leakage_comparison_stratified_group.csv  topic_leakage.csv  vectorizer.joblib
model_2_MLP/: X.npy  [reveal]per_class.csv  [reveal]results.csv  [reveal]train.py  head.pt  label_map.csv  meta.csv  predict.ipynb  train_minimal.py  y.npy
